# cookiecutter-python-flask-clean-architecture

{{cookiecutter.repo_name}}/: Dockerfile  pyproject.toml
{{cookiecutter.repo_name}}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
